--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,3 +10,4 @@ description = "simple kv db"
 anyhow = "1.0.57"
 serde = { version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
+serial_test = "0.6.0"
