--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,4 +10,6 @@ description = "simple kv db"
 anyhow = "1.0.57"
 serde = { version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
+
+[dev-dependencies]
 serial_test = "0.6.0"
