--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+db = { path = "./db", version = "0.1.0" }
+anyhow = "1.0.57"
+thiserror = "1.0.31"
+serde = "1.0.137"
+serde_json = "1.0.81"
+reqwest = { version = "0.11.10", features = ["json", "cookies"]}
+regex = "1.5.5"
+log = "0.4.17"
+env_logger = "0.9.0"
+clap = { version = "3.1.17", features = ["derive"] }
+tokio = { version = "1.18.1", features = ["full"] }
+async-trait = "0.1.53"
+dirs = "4.0.0"
+lazy_static = "1.4.0"
+cookie = "0.16.0"
+const_format = "0.2.24"
+ansi_term = "0.12.1"
