--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ lazy_static = "1.4.0"
 cookie = "0.16.0"
 const_format = "0.2.24"
 ansi_term = "0.12.1"
+serde_with = { version = "1.14.0", features = ["json"]}
