--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ cookie = "0.16.0"
 const_format = "0.2.24"
 ansi_term = "0.12.1"
 serde_with = { version = "1.14.0", features = ["json"]}
+html2text = "0.4.2"
