--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ const_format = "0.2.24"
 ansi_term = "0.12.1"
 serde_with = { version = "1.14.0", features = ["json"]}
 html2text = "0.4.2"
+sscanf = "0.2.1"
